--- a/games/index.html
+++ b/games/index.html
@@ -121,17 +121,8 @@
                 <h2 class="text-2xl font-medium mb-4">Economics Games</h2>
                 <p class="text-gray-600 mb-6">Access all interactive economics games from one place. Play as a guest or sign in to join your class.</p>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+                <div class="grid grid-cols-1 gap-6 mb-6">
                     <!-- Game Cards -->
-                    <div class="bg-gray-50 rounded-lg p-4 border border-gray-200">
-                        <h3 class="text-xl font-medium mb-2">Fiscal Balance Game</h3>
-                        <p class="text-gray-600 mb-4">Balance the federal budget by adjusting spending and taxation policies.</p>
-                        <div class="flex flex-wrap gap-2">
-                            <a href="fiscal-balance/index.html" class="inline-block bg-blue-600 text-white px-3 py-1 rounded text-sm hover:bg-blue-700">Play Now</a>
-                            <a href="fiscal-balance/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-3 py-1 rounded text-sm hover:bg-gray-700">TA Dashboard</a>
-                        </div>
-                    </div>
-
                     <div class="bg-gray-50 rounded-lg p-4 border border-gray-200">
                         <h3 class="text-xl font-medium mb-2">Investment Odyssey</h3>
                         <p class="text-gray-600 mb-4">Manage an investment portfolio and navigate market volatility.</p>
@@ -164,9 +155,7 @@
                             <div class="space-y-4">
                                 <label class="block text-sm font-medium text-gray-700 mb-3">Select Game</label>
                                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-4">
-                                    <a href="fiscal-balance/index.html" class="flex items-center justify-center bg-blue-600 text-white py-3 px-4 rounded hover:bg-blue-700">
-                                        <i class="fas fa-chart-pie mr-2"></i> Fiscal Balance Game
-                                    </a>
+    
                                     <a href="investment-odyssey/index.html" class="flex items-center justify-center bg-green-600 text-white py-3 px-4 rounded hover:bg-green-700">
                                         <i class="fas fa-chart-line mr-2"></i> Investment Odyssey
                                     </a>
@@ -195,9 +184,7 @@
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-3">Play Without Login</label>
                                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
-                                    <a href="fiscal-balance/index.html" class="flex items-center justify-center bg-blue-600 text-white py-3 px-4 rounded hover:bg-blue-700">
-                                        <i class="fas fa-chart-pie mr-2"></i> Fiscal Balance Game
-                                    </a>
+    
                                     <a href="investment-odyssey/single-player.html" class="flex items-center justify-center bg-green-600 text-white py-3 px-4 rounded hover:bg-green-700">
                                         <i class="fas fa-chart-line mr-2"></i> Investment Odyssey
                                     </a>
