--- a/games/investment-odyssey/leaderboard.html
+++ b/games/investment-odyssey/leaderboard.html
@@ -15,8 +15,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="../js/firebase-core.js"></script>
-    <script src="../js/simple-auth.js"></script>
+    <script src="../js/auth-service.js"></script>
     <script src="../js/data-service.js"></script>
+    <script src="../js/simple-auth.js"></script>
+    <script src="../js/investment-game-service.js"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -58,8 +60,11 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <div class="card">
-                    <div class="card-header bg-warning text-white">
+                    <div class="card-header bg-warning text-white d-flex justify-content-between align-items-center">
                         <h3>Global Leaderboard</h3>
+                        <div id="ta-controls" class="d-none">
+                            <button id="reset-leaderboard" class="btn btn-sm btn-danger">Reset Leaderboard</button>
+                        </div>
                     </div>
                     <div class="card-body">
                         <div id="leaderboard-container">
