--- a/games/investment-odyssey/index.html
+++ b/games/investment-odyssey/index.html
@@ -12,10 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="../js/firebase-core.js"></script>
-    <script src="../js/simple-auth.js"></script>
+    <script src="../js/auth-service.js"></script>
     <script src="../js/data-service.js"></script>
+    <script src="../js/simple-auth.js"></script>
+    <script src="../js/investment-game-service.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
@@ -158,27 +159,19 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
-    <script src="js/firebase-config.js"></script>
-    <script src="../js/firebase-config.js"></script>
-    <script src="../js/student-auth.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/class-game.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Check if user is logged in
-            if (StudentAuth.isLoggedIn()) {
+            if (EconGames.SimpleAuth.isLoggedIn()) {
                 // Show logged in view
-                const user = StudentAuth.getCurrentUser();
-                document.getElementById('current-user-name').textContent = user.studentName;
-                document.getElementById('logged-in-id').textContent = user.studentId;
+                const session = EconGames.SimpleAuth.getSession();
+                document.getElementById('current-user-name').textContent = session.name;
+                document.getElementById('logged-in-id').textContent = session.userId;
 
-                // Get class info if available
-                if (user.currentClassId) {
-                    ClassService.getClassData(user.currentClassId)
-                        .then(result => {
-                            if (result.success) {
-                                document.getElementById('logged-in-class').textContent = result.data.name;
-                            }
-                        });
+                // Get session info if available
+                if (session.gameSession) {
+                    document.getElementById('logged-in-class').textContent = session.gameSession.name || 'Session ' + session.gameSession.id;
                 }
 
                 // Show logged in view
@@ -194,67 +187,59 @@
 
             // Register button
             document.getElementById('register-btn').addEventListener('click', function() {
-                StudentAuth.showRegistrationModal();
+                EconGames.SimpleAuth.showRegistrationModal();
             });
 
             // Login button
             document.getElementById('login-btn').addEventListener('click', function() {
-                StudentAuth.showLoginModal();
+                EconGames.SimpleAuth.showLoginModal();
             });
 
             // Join class button
             document.getElementById('join-class-btn').addEventListener('click', async function() {
-                const classCode = document.getElementById('join-class-code').value.trim();
-                if (!classCode) {
-                    alert('Please enter a class code');
+                const joinCode = document.getElementById('join-class-code').value.trim();
+                if (!joinCode) {
+                    alert('Please enter a join code');
                     return;
                 }
 
-                const user = StudentAuth.getCurrentUser();
-                if (!user) {
-                    alert('You must be logged in to join a class');
+                if (!EconGames.SimpleAuth.isLoggedIn()) {
+                    alert('You must be logged in to join a session');
                     return;
                 }
 
                 try {
-                    const result = await StudentService.enrollInClass(user.studentId, classCode);
-                    if (result.success) {
-                        alert('Successfully joined class: ' + result.data.className);
-                        document.getElementById('logged-in-class').textContent = result.data.className;
+                    // Join session using the join code
+                    const result = await EconGames.AuthService.joinSession(EconGames.SimpleAuth.getSession().userId, joinCode);
 
-                        // Update session
-                        SessionManager.saveSession({
-                            studentId: user.studentId,
-                            name: user.studentName,
-                            enrollments: [...user.enrollments, result.data.classId]
-                        }, result.data.classId);
+                    if (result.success) {
+                        alert('Successfully joined session: ' + result.data.name);
+                        document.getElementById('logged-in-class').textContent = result.data.name;
 
                         // Clear the input
                         document.getElementById('join-class-code').value = '';
+
+                        // Reload the page to update the session info
+                        window.location.reload();
                     } else {
-                        alert('Failed to join class: ' + result.error);
+                        alert('Failed to join session: ' + result.error);
                     }
                 } catch (error) {
-                    console.error('Error joining class:', error);
-                    alert('An error occurred while joining the class');
+                    console.error('Error joining session:', error);
+                    alert('An error occurred while joining the session');
                 }
             });
 
             // Continue button
             document.getElementById('continue-btn').addEventListener('click', function() {
-                window.location.href = 'student-dashboard.html';
+                window.location.href = 'game.html';
             });
 
             // Logout button
             document.getElementById('logout-btn').addEventListener('click', function() {
-                StudentAuth.logout();
-            });
-
-            // Set callback for auth success
-            window.onAuthSuccess = function(userData) {
-                console.log('Authentication successful:', userData);
+                EconGames.SimpleAuth.logout();
                 window.location.reload();
-            };
+            });
 
             // Check if we need to reset the class game
             if (localStorage.getItem('resetClassGame') === 'true') {
@@ -264,16 +249,14 @@
                 localStorage.removeItem('resetClassGame');
 
                 // Clear any stored game state
-                localStorage.removeItem('activity4a_student_id');
-                localStorage.removeItem('activity4a_student_name');
-                localStorage.removeItem('activity4a_class_number');
+                localStorage.removeItem('investmentOdysseyGameState');
                 sessionStorage.removeItem('gameState');
 
                 // Clear session
-                SessionManager.clearSession();
+                EconGames.SimpleAuth.clearSession();
 
                 // Show a message
-                alert('Class game has been reset. Please enter your information to join.');
+                alert('Class game has been reset. Please log in to join a session.');
             }
         });
     </script>
