--- a/games/investment-odyssey/single-player.html
+++ b/games/investment-odyssey/single-player.html
@@ -16,8 +16,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="../js/firebase-core.js"></script>
-    <script src="../js/simple-auth.js"></script>
+    <script src="../js/auth-service.js"></script>
     <script src="../js/data-service.js"></script>
+    <script src="../js/simple-auth.js"></script>
+    <script src="../js/investment-game-service.js"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
