--- a/games/investment-odyssey/ta-dashboard.html
+++ b/games/investment-odyssey/ta-dashboard.html
@@ -13,8 +13,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="../js/firebase-core.js"></script>
-    <script src="../js/simple-auth.js"></script>
+    <script src="../js/auth-service.js"></script>
     <script src="../js/data-service.js"></script>
+    <script src="../js/simple-auth.js"></script>
+    <script src="../js/investment-game-service.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
@@ -44,22 +46,19 @@
         <a href="ta-dashboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-blue-600 text-blue-600">TA Dashboard</a>
         <a href="../index.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">All Games</a>
     </div>
-    <!-- Password Modal -->
-    <div class="modal fade" id="passwordModal" tabindex="-1" role="dialog" aria-labelledby="passwordModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+    <!-- TA Authentication Check -->
+    <div class="modal fade" id="authCheckModal" tabindex="-1" role="dialog" aria-labelledby="authCheckModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="passwordModalLabel">TA Authentication</h5>
+                    <h5 class="modal-title" id="authCheckModalLabel">TA Authentication Required</h5>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label for="ta-password">Enter Password:</label>
-                        <input type="password" class="form-control" id="ta-password" placeholder="Enter TA password">
-                        <small id="password-error" class="form-text text-danger"></small>
-                    </div>
+                    <p>You need to be logged in as a Teaching Assistant to access this dashboard.</p>
+                    <p>Please log in through the TA Login page.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="verify-password">Login</button>
+                    <a href="../ta-login.html" class="btn btn-primary">Go to TA Login</a>
                 </div>
             </div>
         </div>
@@ -199,7 +198,18 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
-    <script src="js/firebase-config.js"></script>
     <script src="js/ta-dashboard.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Check if user is logged in as TA
+            if (!EconGames.SimpleAuth.isLoggedIn() || !EconGames.SimpleAuth.isTA()) {
+                // Show auth check modal
+                $('#authCheckModal').modal('show');
+            } else {
+                // User is logged in as TA, initialize dashboard
+                initializeDashboard();
+            }
+        });
+    </script>
 </body>
 </html>
