--- a/games/index.html
+++ b/games/index.html
@@ -10,6 +10,8 @@
     <script src="js/firebase-core.js"></script>
     <script src="js/auth-service.js"></script>
     <script src="js/data-service.js"></script>
+    <script src="js/simple-auth.js"></script>
+    <script src="js/init-database.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
     <style>
@@ -155,7 +157,7 @@
                             <div class="space-y-4">
                                 <label class="block text-sm font-medium text-gray-700 mb-3">Select Game</label>
                                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-4">
-    
+
                                     <a href="investment-odyssey/index.html" class="flex items-center justify-center bg-green-600 text-white py-3 px-4 rounded hover:bg-green-700">
                                         <i class="fas fa-chart-line mr-2"></i> Investment Odyssey
                                     </a>
@@ -184,7 +186,7 @@
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-3">Play Without Login</label>
                                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
-    
+
                                     <a href="investment-odyssey/single-player.html" class="flex items-center justify-center bg-green-600 text-white py-3 px-4 rounded hover:bg-green-700">
                                         <i class="fas fa-chart-line mr-2"></i> Investment Odyssey
                                     </a>
@@ -251,10 +253,10 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Check if user is logged in
-            if (EconGames.AuthService.isLoggedIn()) {
+            if (EconGames.SimpleAuth.isLoggedIn()) {
                 // Show logged in view
-                const session = EconGames.AuthService.getSession();
-                document.getElementById('current-user-name').textContent = session.studentName;
+                const session = EconGames.SimpleAuth.getSession();
+                document.getElementById('current-user-name').textContent = session.name || session.userId;
                 document.getElementById('auth-status').classList.remove('hidden');
                 document.getElementById('auth-buttons').classList.add('hidden');
             } else {
@@ -265,26 +267,27 @@
 
             // Register button
             document.getElementById('register-btn').addEventListener('click', function() {
-                EconGames.AuthService.showRegistrationModal();
+                EconGames.SimpleAuth.showRegistrationModal();
             });
 
             // Login button
             document.getElementById('login-btn').addEventListener('click', function() {
-                EconGames.AuthService.showLoginModal();
+                EconGames.SimpleAuth.showLoginModal();
             });
 
             // Logout button
             document.getElementById('logout-btn').addEventListener('click', function() {
-                EconGames.AuthService.logout();
+                EconGames.SimpleAuth.logout();
+                window.location.reload();
             });
 
             // Add click handlers for game links to clear session for single player mode
             document.querySelectorAll('a[href="investment-odyssey/single-player.html"], a[href="fiscal-balance/index.html"]').forEach(function(link) {
                 link.addEventListener('click', function(e) {
                     // Only for non-logged in users
-                    if (!EconGames.AuthService.isLoggedIn()) {
+                    if (!EconGames.SimpleAuth.isLoggedIn()) {
                         // Clear any existing session
-                        EconGames.AuthService.clearSession();
+                        EconGames.SimpleAuth.clearSession();
 
                         // Set single player mode
                         localStorage.setItem('singlePlayerMode', 'true');
