--- a/games/investment-odyssey/ta-dashboard.html
+++ b/games/investment-odyssey/ta-dashboard.html
@@ -5,6 +5,9 @@
     <title>TA Dashboard - Investment Odyssey</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/header-styles.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -17,6 +20,7 @@
     <script src="../js/data-service.js"></script>
     <script src="../js/simple-auth.js"></script>
     <script src="../js/investment-game-service.js"></script>
+    <script src="../js/init-database.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
