--- a/games/index.html
+++ b/games/index.html
@@ -14,7 +14,7 @@
     <script src="js/auth-service.js"></script>
     <script src="js/data-service.js"></script>
     <script src="js/simple-auth.js"></script>
-    <script src="js/init-database.js"></script>
+    <script src="js/initialize-firestore.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
