--- a/games/investment-odyssey/ta-dashboard.html
+++ b/games/investment-odyssey/ta-dashboard.html
@@ -20,7 +20,7 @@
     <script src="../js/data-service.js"></script>
     <script src="../js/simple-auth.js"></script>
     <script src="../js/investment-game-service.js"></script>
-    <script src="../js/init-database.js"></script>
+    <script src="../js/initialize-firestore.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
