--- a/games/ta-login.html
+++ b/games/ta-login.html
@@ -162,7 +162,7 @@
     <script src="js/auth-service.js"></script>
     <script src="js/data-service.js"></script>
     <script src="js/simple-auth.js"></script>
-    <script src="js/init-database.js"></script>
+    <script src="js/initialize-firestore.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Initialize Firebase with the configuration from firebase-core.js
