--- a/activities/index.html
+++ b/activities/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- Activity Cards -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Activity 1 Card -->
@@ -124,7 +124,8 @@
                         <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Housing Markets</span>
                     </div>
                     <div class="mt-4">
-                        <a href="activity1/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
+                        <a href="activity1/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
+                        <a href="../games/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700">TA Dashboard</a>
                     </div>
                 </div>
             </div>
@@ -133,17 +134,18 @@
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
                 <div class="h-2 bg-blue-600"></div>
                 <div class="p-6">
-                    <h3 class="text-xl font-medium mb-2">Inflation Calculator</h3>
-                    <p class="text-gray-600 mb-4">Calculate the effects of inflation on purchasing power over time.</p>
+                    <h3 class="text-xl font-medium mb-2">Well-being Index</h3>
+                    <p class="text-gray-600 mb-4">Explore alternative measures of economic well-being beyond GDP and create your own well-being index.</p>
                     <div class="flex items-center text-sm text-gray-500 mb-3">
                         <span>April 15-18, 2025</span>
                     </div>
                     <div class="flex flex-wrap gap-1 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Inflation</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Purchasing Power</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Well-being</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Indicators</span>
                     </div>
                     <div class="mt-4">
-                        <a href="activity2/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
+                        <a href="activity2/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
+                        <a href="../games/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700">TA Dashboard</a>
                     </div>
                 </div>
             </div>
@@ -152,17 +154,19 @@
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
                 <div class="h-2 bg-blue-600"></div>
                 <div class="p-6">
-                    <h3 class="text-xl font-medium mb-2">GDP Components</h3>
-                    <p class="text-gray-600 mb-4">Analyze the components of GDP and understand how they contribute to economic growth.</p>
+                    <h3 class="text-xl font-medium mb-2">Leading Economic Indicators</h3>
+                    <p class="text-gray-600 mb-4">Analyze and interpret leading economic indicators to understand economic trends and make forecasts about future economic conditions.</p>
                     <div class="flex items-center text-sm text-gray-500 mb-3">
-                        <span>April 22-25, 2025</span>
+                        <span>May 6-9, 2025</span>
                     </div>
                     <div class="flex flex-wrap gap-1 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">GDP</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Growth</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Indicators</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Forecasting</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Trends</span>
                     </div>
                     <div class="mt-4">
-                        <a href="activity3/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
+                        <a href="activity3/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
+                        <a href="../games/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700">TA Dashboard</a>
                     </div>
                 </div>
             </div>
