--- a/faq.html
+++ b/faq.html
@@ -142,7 +142,7 @@
             
             <div class="mb-4">
                 <h4 class="font-semibold mb-2">How are discussion sections structured?</h4>
-                <p class="text-gray-700">Weekly small group activities focus on using AI tools to analyze economic concepts. Attendance and participation are mandatory to receive credit.</p>
+                <p class="text-gray-700">Weekly small group activities focus on using AI tools to analyze economic concepts. Attendance and participation are required to receive credit. Must attend in 3 of the 5 weeks there are activities (weeks 2, 3, 6, 8, and 10) for full credit.</p>
             </div>
         </div>
         
