--- a/games/index.html
+++ b/games/index.html
@@ -203,6 +203,10 @@
                                             <label for="login-name">Your Name</label>
                                             <input type="text" class="form-control" id="login-name" required>
                                         </div>
+                                        <div class="form-group">
+                                            <label for="login-passcode">Passcode</label>
+                                            <input type="password" class="form-control" id="login-passcode" required>
+                                        </div>
                                         <div id="login-error" class="alert alert-danger" style="display: none;"></div>
                                         <button type="submit" class="btn btn-primary btn-block">Login</button>
                                     </form>
@@ -219,6 +223,11 @@
                                         <div class="form-group">
                                             <label for="register-name">Full Name</label>
                                             <input type="text" class="form-control" id="register-name" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="register-passcode">Passcode (4 digits)</label>
+                                            <input type="password" class="form-control" id="register-passcode" pattern="[0-9]{4}" maxlength="4" required>
+                                            <small class="form-text text-muted">Create a 4-digit passcode to secure your account.</small>
                                         </div>
 
                                         <div class="form-group">
@@ -496,10 +505,17 @@
                 e.preventDefault();
 
                 const name = document.getElementById('login-name').value;
+                const passcode = document.getElementById('login-passcode').value;
                 const errorElement = document.getElementById('login-error');
 
+                if (passcode.length !== 4 || !/^\d+$/.test(passcode)) {
+                    errorElement.textContent = 'Passcode must be 4 digits';
+                    errorElement.style.display = 'block';
+                    return;
+                }
+
                 try {
-                    const result = await EconGames.Auth.loginStudent(name);
+                    const result = await EconGames.Auth.loginStudent(name, passcode);
 
                     if (result.success) {
                         // Refresh auth status
@@ -519,11 +535,18 @@
                 e.preventDefault();
 
                 const name = document.getElementById('register-name').value;
+                const passcode = document.getElementById('register-passcode').value;
                 const joinCode = document.getElementById('register-join-code').value;
                 const errorElement = document.getElementById('register-error');
 
+                if (passcode.length !== 4 || !/^\d+$/.test(passcode)) {
+                    errorElement.textContent = 'Passcode must be 4 digits';
+                    errorElement.style.display = 'block';
+                    return;
+                }
+
                 try {
-                    const result = await EconGames.Auth.registerStudent(name);
+                    const result = await EconGames.Auth.registerStudent(name, passcode);
 
                     if (result.success) {
                         if (joinCode) {
