--- a/games/investment-odyssey/single-player-game.html
+++ b/games/investment-odyssey/single-player-game.html
@@ -334,10 +334,12 @@
     <script src="../js/auth-service-new.js"></script>
     <script src="../js/game-service.js"></script>
     <script src="js/streamlined-auth.js"></script>
-    <script src="js/single-player-main.js"></script>
+    <script src="js/single-player-core.js"></script>
+    <script src="js/single-player-ui.js"></script>
+    <script src="js/single-player-trading.js"></script>
 
     <script>
-        // Check authentication on page load
+        // Initialize game on page load
         document.addEventListener('DOMContentLoaded', function() {
             // Check if user is authenticated
             if (!checkGameAuth()) {
@@ -345,8 +347,14 @@
                 return;
             }
 
-            // User is authenticated, continue with game initialization
-            console.log('User authenticated, initializing game...');
+            // Try to load saved game state
+            if (!loadGameState()) {
+                // Initialize new game if no saved state
+                initializeGame();
+            }
+
+            // Update UI
+            updateUI();
         });
     </script>
 </body>
