--- a/activities/index.html
+++ b/activities/index.html
@@ -91,18 +91,18 @@
 
     <!-- Main Content -->
     <main class="container mx-auto py-8 px-4">
-        <!-- Economics Games Link -->
+        <!-- Investment Odyssey Game -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden mb-8">
             <div class="h-2 bg-purple-600"></div>
             <div class="p-6">
                 <div class="flex flex-col md:flex-row items-center justify-between">
                     <div class="mb-4 md:mb-0">
-                        <h2 class="text-2xl font-medium mb-2">Economics Games</h2>
-                        <p class="text-gray-600">Interactive simulations to apply economic concepts in practice</p>
+                        <h2 class="text-2xl font-medium mb-2">Investment Odyssey</h2>
+                        <p class="text-gray-600">Practice your investment skills in this interactive simulation game</p>
                     </div>
-                    <a href="../games/index.html" class="flex items-center bg-purple-600 hover:bg-purple-700 text-white font-medium py-3 px-6 rounded-lg transition-colors">
-                        <i class="fas fa-gamepad mr-2"></i>
-                        Go to Games Hub
+                    <a href="investment-odyssey/index.html" class="flex items-center bg-purple-600 hover:bg-purple-700 text-white font-medium py-3 px-6 rounded-lg transition-colors">
+                        <i class="fas fa-chart-line mr-2"></i>
+                        Play Investment Odyssey
                     </a>
                 </div>
             </div>
