--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -95,14 +95,17 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h5 style="font-size: 0.9rem;">Cash: $<span id="cash-display">10000.00</span></h5>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h5 style="font-size: 0.9rem;">Portfolio Value: $<span id="portfolio-value-display">0.00</span></h5>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h5 style="font-size: 0.9rem;">Total: $<span id="total-value-display">10000.00</span></h5>
+                                </div>
+                                <div class="col-md-3">
+                                    <h5 style="font-size: 0.9rem;">CPI: <span id="cpi-display">100.00</span></h5>
                                 </div>
                             </div>
                             <div id="cash-injection-alert" class="alert alert-success mt-2" style="display: none;">
