--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -52,6 +52,37 @@
             </div>
         </div>
 
+        <!-- Market Data - Full Width -->
+        <div class="row mb-3">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-danger text-white d-flex justify-content-between align-items-center" style="padding: 1rem;">
+                        <h3 class="mb-0" style="font-size: 1.5rem;">Market Data</h3>
+                        <div>
+                            <span class="badge badge-light" style="font-size: 1rem; padding: 0.5rem;">Round <span id="market-round-display">0</span></span>
+                        </div>
+                    </div>
+                    <div class="card-body p-0">
+                        <div class="table-responsive">
+                            <table class="table table-sm table-hover mb-0" id="market-data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Asset</th>
+                                        <th>Price</th>
+                                        <th>Change</th>
+                                        <th>Chart</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="asset-prices-table">
+                                    <!-- Asset prices will be populated here dynamically -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Game Progress -->
         <div class="row mb-3">
             <div class="col-12">
@@ -159,30 +190,6 @@
                 </div>
 
                 <div class="card mt-4">
-                    <div class="card-header bg-danger text-white d-flex justify-content-between align-items-center">
-                        <h3 class="mb-0">Market Data</h3>
-                        <span class="badge badge-light">Round <span id="market-round-display">0</span></span>
-                    </div>
-                    <div class="card-body p-0">
-                        <div class="table-responsive">
-                            <table class="table table-sm table-hover mb-0" id="market-data-table">
-                                <thead>
-                                    <tr>
-                                        <th>Asset</th>
-                                        <th>Price</th>
-                                        <th>Change</th>
-                                        <th>Chart</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="asset-prices-table">
-                                    <!-- Asset prices will be populated here dynamically -->
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card mt-4">
                     <div class="card-header bg-secondary text-white">
                         <h3>Trade History</h3>
                     </div>
@@ -195,6 +202,8 @@
                         </div>
                     </div>
                 </div>
+
+
             </div>
 
             <div class="col-md-8">
