--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -55,28 +55,53 @@
         <!-- Market Data - Full Width -->
         <div class="row mb-3">
             <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-danger text-white d-flex justify-content-between align-items-center" style="padding: 1rem;">
-                        <h3 class="mb-0" style="font-size: 1.5rem;">Market Data</h3>
+                <div class="card market-data-card">
+                    <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center" style="padding: 1rem; border-bottom: 3px solid #dc3545;">
+                        <div class="d-flex align-items-center">
+                            <i class="fas fa-chart-line mr-2" style="font-size: 1.8rem;"></i>
+                            <h3 class="mb-0" style="font-size: 1.5rem;">Live Market Data</h3>
+                        </div>
                         <div>
-                            <span class="badge badge-light" style="font-size: 1rem; padding: 0.5rem;">Round <span id="market-round-display">0</span></span>
+                            <span class="badge badge-danger" style="font-size: 1rem; padding: 0.5rem;">
+                                <i class="fas fa-clock mr-1"></i> Round <span id="market-round-display">0</span>
+                            </span>
                         </div>
                     </div>
                     <div class="card-body p-0">
-                        <div class="table-responsive">
-                            <table class="table table-sm table-hover mb-0" id="market-data-table">
-                                <thead>
-                                    <tr>
-                                        <th>Asset</th>
-                                        <th>Price</th>
-                                        <th>Change</th>
-                                        <th>Chart</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="asset-prices-table">
-                                    <!-- Asset prices will be populated here dynamically -->
-                                </tbody>
-                            </table>
+                        <div class="row m-0">
+                            <div class="col-md-8 p-0">
+                                <div class="table-responsive">
+                                    <table class="table table-sm table-hover mb-0" id="market-data-table">
+                                        <thead>
+                                            <tr>
+                                                <th>Asset</th>
+                                                <th>Price</th>
+                                                <th>Change</th>
+                                                <th>Chart</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="asset-prices-table">
+                                            <!-- Asset prices will be populated here dynamically -->
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-4 p-3 bg-light">
+                                <h5 class="text-center mb-2">Market Pulse</h5>
+                                <div style="height: 200px;">
+                                    <canvas id="market-pulse-chart"></canvas>
+                                </div>
+                                <div class="d-flex justify-content-around mt-3">
+                                    <div class="text-center">
+                                        <div class="h4 mb-0" id="market-avg-return">0.00%</div>
+                                        <small class="text-muted">Avg Return</small>
+                                    </div>
+                                    <div class="text-center">
+                                        <div class="h4 mb-0" id="market-volatility">0.00%</div>
+                                        <small class="text-muted">Volatility</small>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -239,12 +264,53 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-md-8" style="height: 300px;">
+                            <div class="col-md-8" style="height: 350px;">
                                 <canvas id="portfolio-chart" width="400" height="200"></canvas>
                             </div>
-                            <div class="col-md-4" style="height: 300px;">
+                            <div class="col-md-4" style="height: 350px;">
                                 <h5 class="text-center mb-3">Portfolio Allocation</h5>
                                 <canvas id="portfolio-allocation-chart" width="200" height="200"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mt-4">
+                    <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                        <h3>Comparative Asset Performance</h3>
+                    </div>
+                    <div class="card-body">
+                        <div style="height: 350px;">
+                            <canvas id="comparative-returns-chart" width="400" height="200"></canvas>
+                        </div>
+                        <div class="d-flex flex-wrap justify-content-center mt-3">
+                            <div class="form-check form-check-inline mx-2">
+                                <input class="form-check-input" type="checkbox" id="show-sp500" checked>
+                                <label class="form-check-label" for="show-sp500">S&P 500</label>
+                            </div>
+                            <div class="form-check form-check-inline mx-2">
+                                <input class="form-check-input" type="checkbox" id="show-bonds" checked>
+                                <label class="form-check-label" for="show-bonds">Bonds</label>
+                            </div>
+                            <div class="form-check form-check-inline mx-2">
+                                <input class="form-check-input" type="checkbox" id="show-real-estate" checked>
+                                <label class="form-check-label" for="show-real-estate">Real Estate</label>
+                            </div>
+                            <div class="form-check form-check-inline mx-2">
+                                <input class="form-check-input" type="checkbox" id="show-gold" checked>
+                                <label class="form-check-label" for="show-gold">Gold</label>
+                            </div>
+                            <div class="form-check form-check-inline mx-2">
+                                <input class="form-check-input" type="checkbox" id="show-commodities" checked>
+                                <label class="form-check-label" for="show-commodities">Commodities</label>
+                            </div>
+                            <div class="form-check form-check-inline mx-2">
+                                <input class="form-check-input" type="checkbox" id="show-bitcoin" checked>
+                                <label class="form-check-label" for="show-bitcoin">Bitcoin</label>
+                            </div>
+                            <div class="form-check form-check-inline mx-2">
+                                <input class="form-check-input" type="checkbox" id="show-cpi" checked>
+                                <label class="form-check-label" for="show-cpi">CPI</label>
                             </div>
                         </div>
                     </div>
